--- a/src/components/ChatWidget.module.css
+++ b/src/components/ChatWidget.module.css
@@ -33,10 +33,14 @@
 }
 
 .toggleImg {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center 30%;
   display: block;
+  border-radius: 50%;
 }
 
 .toggleFallback {
